# hotpow

./: .gitignore  .ocamlformat  Dockerfile  Makefile  README  attack_commit_censor.ml  attack_parallel_censor.ml  bprot-devel.opam  bprot.ml  bprot.opam  bprot_censor.ml  check_alpha.R  common.ml  components.ml  dummy_dsa.ml  dummy_dsa.mli  dune  dune-project  dune-workspace.static  event_queue.ml  event_queue.mli  explore.R  hotpow-devel.opam  hotpow.install  hotpow.ml  hotpow.opam  hotpow_censor.ml  hotpow_censor.patch  hotpow_censor_simple.patch  hotpow_selfish.ml  hotpow_selfish.patch  intf.ml  lazysim.ml  optim_orphan.ml  patch.sh  primitives.ml  prot_commit.ml  prot_parallel.ml  sim.ml  sim.sh  (+6 more)
R/: explore.R
eval/: eval.R  explore.R  old-mc.csv  viz-blockchain.sh
lib/: dune  graph.ml  graph.mli  graphml.ml  graphml.mli  rvar.ml  rvar.mli
viz/: README  beamer.tex  standalone.tex  viz.R
